# api/docs/swagger.yaml
@@ -78,6 +78,13 @@ definitions:
       type:
         type: string
     type: object
+  models.UpdatePassword:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   models.UserCreate:
     properties:
       email:
@@ -329,6 +336,50 @@ paths:
                   type: string
               type: object
       summary: SendEmail
+      tags:
+      - Auth
+  /auth/update_password:
+    post:
+      consumes:
+      - application/json
+      description: UpdatePassword
+      operationId: /auth/update_password
+      parameters:
+      - description: UpdatePasswordRequest
+        in: body
+        name: checkEmail
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdatePassword'
+      responses:
+        "200":
+          description: Success Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Server error
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: UpdatePassword
       tags:
       - Auth
   /course:
